# aliexpress-spider

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.bat  verify.bat
aliexpress_spider/: __main__.py  cli.py  config.py  crawler.py  elasticsearch_store.py  filters.py  formatter.py  html_utils.py  network.py  output.py  parser.py  verify.py
config/: categories.yaml
scripts/: install.bat  install.ps1  install.sh  pull.bat  pull.ps1  reinstall.bat  reinstall.sh  start.bat  start.ps1  start.sh  verify.bat  verify.sh
tests/: test_html_utils.py  test_spider.py
